wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_2.stderr
error: expected a field to defer into, found none
 --> tests/derive_error_category/fail_on_invalid_defer_2.rs:7:5
  |
7 |     SingleStruct {},
  |     ^^^^^^^^^^^^
