wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_2.rs
use wallet_common::ErrorCategory;

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum Error {
    #[category(defer)]
    SingleStruct {},
}

fn main() {}
